@@ -4,6 +4,10 @@
 	maybe-raise-tab. Instead make, what was tab-raise-on-hover the
 	predefined behaviour.
 
+	* lisp/sawfish/wm/tabs/tabgroup.jl: improved tab-refresh-group, added
+	support for maximized/unmaxmized, focus-mode, gravity, sticky-viewport
+	and never-maximize. Small fix for before-move-resize [fuchur]
+
 	* KEYBINDINGS: small update
 
 2011-02-21  Christopher Roy Bratusek <zanghar@freenet.de>
